# hash_zero_endings_finder

./: Cargo.toml  test.txt
benches/: my_benchmark.rs
src/: args.rs  finder.rs  generator.rs  lib.rs
src/finder/: output.rs
tests/: cli_app_test.rs
