[package]
name = "hash_zero_endings_finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
sha256 = "1.4.0"
clap = "4.4.2"
num_cpus = "1.16.0"
crossbeam = "0.8.2"
crossterm = "0.27.0"
